# sisko

./: .editorconfig  .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  TODO.md  notes.md
cursive_react/: Cargo.toml
sisko_lib/: Cargo.toml
sisko_lib/ref/: id3v2.3.0.txt  id3v2.4.0-frames.txt
sisko_lib/src/: id3v2_extended_flag_data.rs  id3v2_extended_flags.rs  id3v2_extended_header.rs  id3v2_footer.rs  id3v2_frame.rs  id3v2_frame_fields.rs  id3v2_frame_flags.rs  id3v2_frame_format_description.rs  id3v2_frame_header.rs  id3v2_frame_status_messages.rs  id3v2_header.rs  id3v2_header_flags.rs  id3v2_tag.rs  id3v2_tag_restrictions.rs  id3v2_version_number.rs  lib.rs  picture_type.rs  synch_safe_integer.rs  text_encoding.rs
src/: file.rs  file_column.rs  file_dialog_type.rs  file_service.rs  file_type.rs  icursive.rs  main.rs  sisko_service.rs  tag.rs  tag_column.rs  tag_service.rs  track.rs  track_column.rs  track_service.rs  ui.rs
src/domain/: album.rs  album_repository.rs  album_service.rs  audio_file.rs  audio_file_repository.rs  audio_file_service.rs  domain_event.rs  file.rs  file_service.rs  file_type.rs  id3v2_tag_wrapper.rs  ifile_service.rs  ilog_history.rs  isisko_service.rs  itag_service.rs  itrack_service.rs  log_history.rs  mediator_service.rs  mod.rs  recording.rs  sisko_service.rs  tag.rs  tag_field.rs  tag_field_type.rs  tag_service.rs  tag_type.rs  track.rs  track_service.rs
src/domain/events/: domain_event.rs  mod.rs  (+1 more)
src/infrastructure/: cursive_extensions.rs  database.rs  di_container_extensions.rs  entity.rs  mod.rs  table_view_extensions.rs
src/ui/: album_view.rs  audio_file_column.rs  audio_file_view.rs  cb_sink_service.rs  cursive_wrapper.rs  file_view.rs  icursive.rs  iui.rs  mod.rs  tag_column.rs  tag_field_column.rs  tag_field_view.rs  tag_view.rs  track_view.rs  ui.rs  ui_element.rs  ui_event.rs  ui_event_handler.rs  ui_event_service.rs  ui_host.rs  ui_wrapper.rs
(+68 files in other folders)
