[workspace]
members = ["sisko_lib"]

[package]
name = "sisko"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cursive = "0.20.0"
cursive_table_view = "0.14"
itertools = "0.13.0"
mime_guess = "2.0"
sisko_lib = { path = "./sisko_lib" }
syrette = { version = "0.5", features = ["async"] }

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]
