[workspace]
members = ["sisko_lib"]

[package]
name = "sisko"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cursive = "0.20.0"
cursive_table_view = "0.14"
itertools = "0.13.0"
log4rs = "1.3"
mime_guess = "2.0"
regex = "1.10"
serde_json = "1.0"
sisko_lib = { path = "./sisko_lib" }
tokio = { version = "1", features = ["full"] }

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.log]
version = "0.4"
features = ["kv", "kv_std"]

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
